[package]
name = "tag_db_server"
version = "0.3.0"
authors = ["coco <coco@hexgolems.com>"]

[dependencies]
unix_socket = "0.5.*"
byteorder = "0.4.*"
rmp = "^0.7"
argparse = "*"

[dependencies.memrange]
git = "https://github.com/theban/memrange"

[dependencies.tag_db]
git = "https://github.com/eqv/tag_db"
