[package]
name = "theban_db_server"
version = "0.3.3"
authors = ["coco <coco@hexgolems.com>"]
license-file = "LICENSE"
repository = "https://github.com/theban/db-server"
description = "a unix socket server for theban_db"

[dependencies]
unix_socket = "0.5.*"
byteorder = "0.4.*"
rmp = "^0.7"
argparse = "0.2.*"
memrange = "0.1.*"
theban_db = "0.6.*"
rmp-serialize = "0.7.*"
rustc-serialize = "0.3.*"
quick-error = "1.0.0"
